# Manifold-Optimization-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: algorithm.rs  lib.rs  linalg.rs  main.rs  manifolds.rs  problem.rs  utils.rs
src/algorithm/: line_search.rs  rgd.rs  rtr.rs
src/linalg/: lapack.rs  qr.rs  svd.rs
src/manifolds/: fixed_rank.rs  grassmann.rs  manifold.rs  sphere.rs  stiefel.rs
src/utils/: impl_ndarray.rs  inner_product.rs  lapack.rs  qr.rs  random_point.rs  svd.rs  tools.rs  traits.rs
