[package]
name = "manifold-optimization"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license = "MIT"
description = "A Rust library for optimization on manifolds."
authors = [
    "Yuhao Jiang <>",
]

[dependencies]
rand = "0.9.4"
ndarray = { version = "0.17.2" }
ndarray-rand = "0.16.0"
argmin = "0.11.0"
num-traits = "0.2"
num-complex = "0.4.6"
derive-new = "0.7.0"
rand_distr = "0.5.1"
lapack-sys = "0.15.0"
openblas-src = {version = "0.10.15", features = ["system"]}

[dev-dependencies]
paste = "1.0"

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2.15"
